apps/s3-proxy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: s3-proxy
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: s3-proxy
  type: ClusterIP
