apps/s3-proxy/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: s3-proxy
spec:
  to:
    kind: Service
    name: s3-proxy
    weight: 100
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
